--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -455,7 +455,7 @@ h6 {
 .header {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 20px 0;
+  padding-top: 2px;
   transition: all 0.5s;
   z-index: 997;
 }
@@ -465,9 +465,37 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  max-height: 150px;
   margin-right: 8px;
 }
+
+
+@media (max-width: 1200px) {
+  .header .logo img {
+    max-height: 100px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header .logo img {
+    max-height: 100px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header .logo img {
+    max-height: 150px;
+  }
+}
+
+@media (max-width: 576px) {
+  .header .logo img {
+    max-height: 100px;
+  }
+}
+
+
+
 
 .header .logo h1 {
   font-size: 32px;
